--- a/spec/vcr/get_series_episodes_valid_token.yml
+++ b/spec/vcr/get_series_episodes_valid_token.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.thetvdb.com/login
     body:
       encoding: UTF-8
-      string: '{"apikey":"61D6EC4CCA8DEB19"}'
+      string: '{"apikey":"valid_key"}'
     headers:
       Content-Type:
       - application/json
